# grid-backend-service

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/scripts/: gen_ref_pages.py
src/: main.py
src/config/: settings.py
src/models/: grid_asset_model.py  models.py
src/routers/: api.py
src/routers/v1/: __init__.py  grid_asset_route.py
src/schemas/: __init__.py  grid_asset_schema.py
src/services/: grid_asset_service.py
