[tool.poetry]
name = "grid-backend-service"
version = "0.1.0"
description = ""
authors = ["tobias2910 <33369379+tobias2910@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "grid_backend_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.7.0"
flake8-string-format = "^0.3.0"
isort = "^5.12.0"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-gen-files = "^0.4.0"
mkdocs-material = "^9.0.7"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.4"
mypy = "^0.991"
tryceratops = "^1.1.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pyright]
reportGeneralTypeIssues = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "."
]
testpaths = "tests"

[tool.autoflake]
check = true

[tool.mypy]
disallow_any_unimported = false
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true